2006-06-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): If a data field matches the current setting
	of 'set datafile missing "foo"', then do not interrupt the plotted line
	spanning the adjacent points in the plot.  This was the behavior in 
	version 3.7, and is what the documents describe, but has not been the
	case in version 4.0.
	Bugs #775810 #918793 #969322 #1403945

2006-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c: Whitespace cleanup, comments.

	* demo/contours.dem: Update demo to use "set view map".

2006-06-23  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/help.c (FindHelp): Return a pointer to an empty help key if the
	user help string is ambiguous.  Change the len computation from strlen()
	to strcspn() so that non ambiguous, sub-optioned strings work.
	(help): Only PrintHelp if text exists to prevent blank line at output.

2006-06-23  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/image.dem: Clean up missing quotes.  Removed some resets so
	that the palette doesn't change except when necessary.

	* src/graphics.dem src/set.c: Cosmetic changes.

2006-06-22  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/datafile.c (df_readline): Check input values
	against NaN, but only if the system supports the isnan() test.
	NaN input values are treated as UNDEFINED.
	Bug #1490699

2006-06-21  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/scatter2.bin demo/sine.bin demo/using.bin demo/blutux.rgb:
	Flag these files as binary in the CVS repository
		 cvs admin -kb *.bin *.rgb
	Hopefully this will fix image.dem under Windows

2006-06-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/wxt.trm: Small correction in TERM_HELP.

2006-06-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp: Small cleanups to avoid -Wall warnings.

2006-06-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main) src/term.c (init_terminal): Revisit fix of